--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: why_rails_development
+  database: why_buy_4_devlopment
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: why_rails
+  #username: why_buy_4
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: why_rails_test
+  database: why_buy_4_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: why_rails_production
-  username: why_rails
-  password: <%= ENV['WHY_RAILS_DATABASE_PASSWORD'] %>
+  database: why_buy_4_production
+  username: why_buy_4
+  password: <%= ENV['why_buy_4_DATABASE_PASSWORD'] %>
