--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts-ts": "2.17.0",
+    "react-test-renderer": "^16.5.2",
     "styled-components": "^3.4.9"
   },
   "scripts": {
@@ -18,10 +17,15 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.14",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "jest": "^23.6.0",
     "typescript": "^3.0.3"
   }
